# Chat-Nova

./: .env.example  App.tsx  CNAME  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  themePresets.ts  types.ts
components/: AIFace.tsx  ChatInput.tsx  ChatMessage.tsx  DeveloperModal.tsx  Header.tsx  Logo.tsx  SplashScreen.tsx  VoiceChatOverlay.tsx  VoiceLoginModal.tsx  WelcomeScreen.tsx
services/: backend.ts  database.ts  gemini.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
