[package]
name = "chat-nova"
version = "0.1.0"
description = "A premium high-fidelity Chat Nova assistant compiled in Rust for Android"
authors = ["Chat Nova Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "chat_nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-http = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
log = "0.4"
android_logger = "0.13" # Used to pipe Rust println! and log::info! directly to Android logcat

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
